--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
 
   "[json][jsonc][typescript][javascript]": {
     "editor.defaultFormatter": "biomejs.biome"
-  }
+  },
+  "npm.packageManager": "npm"
 }
